<resources>
    <string name="app_name">OpenDecibelMeter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">User</string>
    <string name="nav_header_email">mail@anonymous</string>
    <string name="action_settings">Settings</string>
    <string name="nav_login">Login</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_graph">Graph</string>
    <string name="nav_view_log">Log</string>

    <!-- Strings related to measure activity -->
    <string name="measure_get_position">get position</string>
    <string name="measure_calibrate">Calibrate Device</string>
    <string name="measure_save_amplitude">Save Amplitude</string>
    <string name="measure_logging_start">Start Logging</string>
    <string name="measure_logging_stop">Stop Logging</string>
    <string name="measure_location">Location</string>
    <string name="measure_latitude">Latitude</string>
    <string name="measure_longitude">Longitude</string>
    <string name="measure_auto_upload">auto upload data</string>
    <string name="measure_auto_update">auto update</string>
    <string name="title_activity_measure">MeasureActivity</string>
    <string name="update_location">update location</string>
    <string name="default_username">anonymous user</string>
    <string name="default_email">User</string>
    <string name="error_db_record">Error with saving log</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_service_name">Opensenemap.org</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings related to profile -->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="label_username">Username</string>
    <string name="label_email">E-Mail</string>
    <string name="button_logout">Logout</string>
    <string name="title_activity_view_log">ViewLogActivity</string>
    <string name="title_activity_graph">GraphActivity</string>

    <!-- Noise level -->
    <string name="noise_0">healthy hearing threshold</string>
    <string name="noise_10">a pin dropping</string>
    <string name="noise_20">rustling leaves</string>
    <string name="noise_30">whisper</string>
    <string name="noise_40">babbling brook</string>
    <string name="noise_50">light traffic</string>
    <string name="noise_60">conversational speech</string>
    <string name="noise_70">shower</string>
    <string name="noise_80">alarm clock</string>
    <string name="noise_90">car engine</string>
    <string name="noise_100">motorcycle (riding)</string>
    <string name="noise_110">roaring lion</string>
    <string name="noise_120">thunderclap</string>
    <string name="noise_130">peak stadium crowd noise</string>
    <string name="noise_140">jet engine at takeoff</string>
    <string name="noise_150">fighter jet launch</string>
    <string name="noise_160">shotgun</string>
    <string name="noise_170">safety airbag</string>
    <string name="noise_180">rocket launch</string>

</resources>