<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/fa_sign_in"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/fa_user"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/fa_bar_chart"
            android:title="@string/nav_graph" />

        <item
            android:id="@+id/nav_view_log"
            android:icon="@drawable/fa_list"
            android:title="@string/nav_view_log" />
    </group>

</menu>
