<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MeasureActivity"
    tools:showIn="@layout/app_bar_measure">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measure_location"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/measure_latitude"
                        android:textAlignment="viewStart"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/positionLatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:text="0"
                        android:textAlignment="viewEnd" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/measure_longitude"
                        android:textAlignment="viewStart"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/positionLongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:text="0"
                        android:textAlignment="viewEnd" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/positionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measure_get_position" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/decibelView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 db"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Switch
                android:id="@+id/autoUploadSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measure_auto_upload"
                android:textAlignment="center" />

            <Button
                android:id="@+id/calibrateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measure_calibrate" />

            <Button
                android:id="@+id/logBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measure_logging_start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calibrateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#000000" />

            <EditText
                android:id="@+id/calibrateForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <Switch
                android:id="@+id/autoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measure_auto_update"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>